# nos-followers

./: .gitignore  20240829_backfill_last_contact_list_at.cypher  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  entrypoint.sh  prometheus.yaml
.github/workflows/: publish-docker-image.yml  rust.yml
.sqlx/: query-1540f15524487b3746e59e9654f67485d4c8bb301ffb78f09e3c8a0cc2e0f80a.json
backfills/: README.md
config/: settings.development.yml  settings.yml
db/: password.txt
migrations/: 001_create_initial_schema.cypher  002_followers_count_index.cypher  003_followees_count_index.cypher  004_pagerank_index.cypher  005_user_composite_index.cypher  20240801164418_create_follows_table.up.sql
queries/: README.md  find_spammers.cypher  set_fresh_value_to_null_followee_counts.cypher  set_fresh_value_to_null_follower_counts.cypher  set_null_followers_counts_values.cypher  users_by_similar_followees.cypher
scripts/: import_from_relay.sh  make_10_followers_for_2_followees.sh  tag_latest_as_stable.sh
src/: account_info.rs  config.rs  contacts_differ.rs  domain.rs  fetch_friendly_id.rs  follow_change_handler.rs  follows_differ.rs  google_publisher.rs  google_pubsub_client.rs  handle_follow_changes.rs  http_server.rs  lib.rs  main.rs  metrics.rs  migrations.rs  publisher.rs  rate_counter.rs  rate_limiter.rs  recommendation_queue.rs  refresh_friendly_id.rs  relay_subscriber.rs  repo.rs  scheduler.rs  send_with_checks.rs  tcp_importer.rs  tokio_rate_limiter.rs  trust_policy.rs  unique_follow_changes.rs  vanish_subscriber.rs  worker_pool.rs
src/domain/: account_info.rs  contact_list_follow.rs  follow.rs  follow_change.rs  follow_change_aggregator.rs  follow_change_batch.rs  followee_aggregator.rs  followee_notification_factory.rs  follows_differ.rs  notification_factory.rs  notification_message.rs
src/http_server/: handlers.rs  router.rs  trust_policy.rs
