[package]
name = "nos_followers"
version = "0.1.0"
edition = "2021"
default-run = "nos_followers"

[[bin]]
name = "nos_followers"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
axum = "0.7.5"
cached = { version = "0.53.1", features = ["async"] }
chrono = { version = "0.4.38", features = ["serde"] }
config_rs = { version = "0.14", package = "config", features = ["yaml"] }
env_logger = "0.11.5"
futures = "0.3.30"
gcloud-sdk = { version = "0.25.6", features = ["google-pubsub-v1"] }
hyper = "1.4.1"
log = "0.4.22"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
moka = { version = "0.12.8", features = ["future"] }
neo4rs = "0.8.0"
nonzero_ext = "0.3.0"
nostr-sdk = "0.33.0"
ordermap = "0.5.3"
rustls = { version = "0.23.12", features = ["ring"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full", "test-util"] }
tokio-cron-scheduler = "0.11.0"
tokio-retry = "0.3.0"
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["cors", "timeout", "trace"] }
tower_governor = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }

[dev-dependencies]
assertables = "8.3.0"
pretty_assertions = "1.2"

[features]
ci = []

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
